# manta-ray

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/fonts/overpass-mono/: SIL Open Font License.txt
cli/: CMakeLists.txt
cli/include/: compiler.h  configuration.h
cli/src/: compiler.cpp  main.cpp
demos/: aperture_demo.cpp  blocks_demo.cpp  box_city_demo.cpp  complex_room_demo.cpp  cube_test_demo.cpp  demos.cpp  demos.h  main.cpp  material_visualizer.cpp  pen_demo.cpp  samsung_a8_demo.cpp  sdl_demo.cpp  settings.h  simple_room_demo.cpp  small_house_demo.cpp  stock_scene_demo.cpp  stress_spiders.cpp  teapot_demo.cpp  teapot_lamp_demo.cpp  utils.cpp  utils.h
demos/cmfs/: d65_lighting.csv  xyz_cmf.csv  xyz_cmf_31.csv
demos/fraunhofer-simulation/: main.cpp
demos/models/: box_city_demo.cpp  material_visualizer.mtl
demos/sdl/: blocks_demo.mr  box_city_demo.mr  fraunhofer_demo.mr  pen_demo.mr  quick_render_demo.mr  sdl_demo.mr  stock_scene_demo.mr  teapot_lamp_demo.mr  the_gadget.mr  utilities.mr
demos/sdl/lib/: atomic_types.mr  color.mr  lambertian_bsdf.mr  microfacet_refl_bsdf.mr
demos/sdl/samsung/: samsung_banner_demo.mr  samsung_instagram.mr  samsung_materials.mr
dependencies/delta/include/: yds_allocator.h  yds_animation_action.h  yds_animation_action_binding.h  yds_animation_curve.h  yds_animation_interchange_file.h  yds_animation_interchange_file_reader.h  yds_animation_interchange_file_reader_0_0.h  yds_animation_interchange_file_reader_0_1.h  (+117 more)
dependencies/submodules/: CMakeLists.txt  README.md
flex-bison/: sdl_scanner.l  sdl_specification.y  test.l
include/: aces_fitted_node.h  aces_fitted_node_output.h  add_bxdf_node.h  aperture.h  aperture_render_node.h  append_path_node.h  area_light.h  average_node_output.h  batched_monte_carlo_emitter.h  batched_monte_carlo_emitter_group.h  biconvex_lens.h  bilayer_brdf.h  bilayer_bsdf.h  binary_node.h  binary_node_output.h  box_filter.h  bsdf.h  bsdf_emitter.h  bsdf_node_output.h  bump_node.h  bump_node_output.h  bxdf.h  bxdf_to_bsdf_node.h  cacheable_input.h  cached_vector_node.h  cached_vector_output.cpp  cached_vector_output.h  camera_ray_emitter.h  camera_ray_emitter_group.h  cft_estimator_2d.h  circle_convolution.h  circular_aperture.h  cmf_table.h  coarse_intersection.h  color.h  complex_bake_node.h  complex_map_2d.h  complex_map_2d_node.h  complex_map_2d_node_output.h  complex_map_interface_node.h  (+271 more)
opencl_programs/: mantaray.cl
project/: mantaray.sln  mantaray_and_piranha.sln  mantaray_piranha_delta.sln
project/fraunhofer_simulation/: fraunhofer_simulation.vcxproj  fraunhofer_simulation.vcxproj.filters
project/mantaray/: mantaray.vcxproj  mantaray.vcxproj.filters  stack_allocator.cpp
project/mantaray_cli/: mantaray_cli.vcxproj  mantaray_cli.vcxproj.filters
project/mantaray_demos/: mantaray_demos.vcxproj  mantaray_demos.vcxproj.filters
project/mantaray_image_utility/: mantaray_image_utility.vcxproj  mantaray_image_utility.vcxproj.filters
project/mantaray_test/: mantaray.cl  mantaray_test.vcxproj  mantaray_test.vcxproj.filters  pch.h
project/mantaray_ui/: mantaray_ui.vcxproj  mantaray_ui.vcxproj.filters
scripts/: compile_flex_bison.bat  copy_dlls.py  get_piranha.py  increment_build_version.py  new_contributor.py  package_mantaray_cli.py  run_batch_file.py
sdl/manta-lib/: mantaray.mr
src/: aces_fitted_node.cpp  aces_fitted_node_output.cpp  add_bxdf_node.cpp  aperture.cpp  aperture_render_node.cpp  append_path_node.cpp  area_light.cpp  batched_monte_carlo_emitter.cpp  batched_monte_carlo_emitter_group.cpp  biconvex_lens.cpp  bilayer_brdf.cpp  bilayer_bsdf.cpp  box_filter.cpp  bsdf.cpp  bsdf_emitter.cpp  bsdf_node_output.cpp  bump_node.cpp  bump_node_output.cpp  bxdf.cpp  bxdf_to_bsdf_node.cpp  cached_vector_node.cpp  cached_vector_output.cpp  camera_ray_emitter.cpp  camera_ray_emitter_group.cpp  cft_estimator_2d.cpp  circle_convolution.cpp  circular_aperture.cpp  cmf_table.cpp  complex_map_2d.cpp  complex_map_2d_node.cpp  complex_map_sample_node_output.cpp  complex_map_sampler.cpp  complex_node_output.cpp  complex_split_node.cpp  complex_split_node_output.cpp  console.cpp  constructed_complex_node.cpp  constructed_complex_node_output.cpp  constructed_float_node.cpp  constructed_float_node_output.cpp  (+220 more)
test/: bsdf_tests.cpp  camera_emulation_tests.cpp  color_tests.cpp  file_operations_tests.cpp  fraunhofer_tests.cpp  image_plane_tests.cpp  integration_testing.cpp  jpeg_tests.cpp  kdtree_tests.cpp  math_tests.cpp  memory_tests.cpp  mesh_intersection_tests.cpp  mesh_processing_tests.cpp  mipmap_tests.cpp  node_tests.cpp  octree_tests.cpp  opencl_tests.cpp  primitives.cpp  sanity_check.cpp  sdl_construction_tests.cpp  sdl_stress_tests.cpp  sdl_tests.cpp  signal_processing_tests.cpp  utilities.cpp  utilities.h
test/sdl/: attribute_definition_test.mr  basic_bsdf_test.mr  basic_float_test.mr  basic_object_file_test.mr  basic_phong_test.mr  basic_string_test.mr  basic_vector_test.mr  dependency_test.mr  dependency_tree.mr  duplicate_node_definition.mr  input_connection_test.mr  missing_dependency.mr  node_body.mr  operation_definition.mr  position_attribute_test.mr  reference_resolution.mr  simple_sdl.txt  single_empty_node.mr  single_node_bool.mr  single_node_builtin.mr  single_node_data_access.mr  single_node_definition.mr  single_node_import_statement.mr  single_node_inline_node.mr  single_node_inline_node.txt  single_node_simple_eq.mr  single_node_single_attrib.mr  single_node_single_attrib.txt  single_node_single_int.mr  single_node_string_attrib.mr  single_node_two_attribs.mr  single_node_two_attribs.txt  single_node_vector_float.mr  single_node_vector_int.mr  syntax_error.mr  two_nodes.mr  two_nodes.txt
tests/: mesh_intersection_tests.cpp
tracking/: BuildVersion.txt
ui/: CMakeLists.txt
ui/include/: application.h  bounding_box.h  compiler.h  compiler_thread.h  configuration.h  delta.h  grid.h  preview.h  ui_console.h
ui/src/: application.cpp  bounding_box.cpp  compiler.cpp  compiler_thread.cpp  grid.cpp  main.cpp  preview.cpp  ui_console.cpp
utilities/src/: main.cpp
(+371 files in other folders)
